PP-395: Fix active text align (#100)
* PP-395: Fix active text align

* PP-395: Text properties

* PP-395: Fix font family

* PP-395: Exit digital canvas

--- a/src/components/Thumbnail/Frames/style.scss
+++ b/src/components/Thumbnail/Frames/style.scss
@@ -49,7 +49,7 @@
   }
   .header-name {
     color: #8c8c8c;
-    font-family: $font-700;
+    font-family: $font-500;
     margin-left: 8px;
     max-width: 280px;
     white-space: nowrap;
